# voxl-mavlink-mqtt-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  deploy_to_voxl.sh  install_build_deps.sh  make_package.sh
bash_completions/: voxl-configure-mqtt-client
include/: config_file.h  mavlink_json.h  modal_journal_stub.h  modal_pipe_stub.h  modal_start_stop_stub.h  mqtt_client.h  native_stubs.h  publish_timer.h
include/stubs/: modal_pipe_client_stub.h  modal_pipe_stub.h  modal_start_stop_stub.h
pkg/control/: control  postinst
scripts/: voxl-configure-mavlink-mqtt-client  voxl-configure-mqtt-client
services/: voxl-mavlink-mqtt-client.service  voxl-mqtt-client.service
src/: CMakeLists.txt  config_file.cpp  main.cpp  mavlink_json.cpp  mqtt_client.cpp  native_stubs.cpp  publish_timer.cpp
